refactored front end routes to be more clear, fix resizing bug where components would go off screen when sizing was too small, min width was constantly changing

--- a/app/assets/stylesheets/api/profile.scss
+++ b/app/assets/stylesheets/api/profile.scss
@@ -9,7 +9,6 @@
 .profile-header-pic {
   float: left;
   position: relative;
-  z-index: 2;
   width: 180px;
   height: 180px;
   border-radius: 10%;
